--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -8,3 +8,16 @@ body{
     color:#333333;
     font-size: 20px;
 }
+
+.title-bold{
+    font-weight: bold;
+}
+
+.nav-hover {
+    padding-right: 10px;
+}
+
+.nav-hover:hover{
+    cursor: pointer;
+    color: #fff;
+}
