--- a/webapp/src/css/Navbar.css
+++ b/webapp/src/css/Navbar.css
@@ -2,3 +2,13 @@
     background-color: transparent;
     transition: background-color 0.7s ease 0s;
 }
+
+.language{
+    text-align: center;
+    border-radius: 5px;
+    background-color: #282828;
+}
+
+.lang-label-dropdown{
+    cursor: pointer;
+}
