--- a/webapp/src/css/Home.css
+++ b/webapp/src/css/Home.css
@@ -103,3 +103,14 @@
 .github-icon:hover{
     font-size: 220px;
 }
+
+.phrase {
+    margin-top: 50px;
+    color:#5f605f;
+    font-size: 24px;
+}
+
+.phrase-author {
+    color:#333333;
+    font-size: 18px;
+}
